[gd_scene load_steps=9 format=2]

[ext_resource path="res://Shapes/ButtonCollisonShapeTop.tres" type="Shape2D" id=2]
[ext_resource path="res://Scripts/ButtonBlue.gd" type="Script" id=3]
[ext_resource path="res://Assets/ButtonsAndBlocks/switch23.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/ButtonsAndBlocks/switchBlue_pressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/ButtonsAndBlocks/switchBlue.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3, 4 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 7 )

[node name="ButtonBlue" type="StaticBody2D"]
collision_layer = 8
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -32 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "up"

[node name="CollisionShapeTop" type="CollisionShape2D" parent="."]
position = Vector2( 0, -32 )
rotation = 1.5708
shape = ExtResource( 2 )

[node name="TopChecker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2( 0, -44 )
shape = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Effects"

[node name="CollisionShapeBase" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 5 )

[connection signal="body_entered" from="TopChecker" to="." method="_on_TopChecker_body_entered"]
[connection signal="body_exited" from="TopChecker" to="." method="_on_TopChecker_body_exited"]
